# gauge_driver

./: .gitignore  .mxproject  stm32ide_proj.ioc
Core/Src/: main.c  stm32wbxx_hal_msp.c
EWARM/: Project.eww  stm32ide_proj.ewd  stm32ide_proj.ewp  stm32wb55xx_sram_cm4.icf
cubeide_proj/: .cproject  .mxproject  .project  CMakeLists.txt  CMakePresets.json  STM32WB55RGVX_FLASH.ld  stm32ide_proj ATTACH.launch  stm32ide_proj Debug.launch  stm32ide_proj Release.launch  stm32ide_proj.ioc  toolchain-arm-gcc.cmake
cubeide_proj/BMI088-lib/: BMI088.c  BMI088.h
cubeide_proj/Core/BMI088-lib/: BMI088.c  BMI088.h
cubeide_proj/Core/BTBuffer-lib/: BTBuffer.cpp  BTBuffer.hpp
cubeide_proj/Core/ECUK-lib/: ECUK.cpp  ECUK.hpp  MUTII.hpp  ODB2.hpp
cubeide_proj/Core/Inc/: HzSensorFilter.hpp  HzSensorKalmanFilter.hpp  _main_cpp.h  app_conf.h  board_ILI9341.h  board_SSD1306.h  board_SSD1322.h  board_SSD1351.h  board_ST7789VI.h  board_s6e63d6.h  common.h  cpp_main.h  filters.h  gfxconf.h  main.h  main_cpp_wrapper.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h  tachTest.hpp  ugfx_widgets.h  utils.h
cubeide_proj/Core/MCP4725-lib/: MCP4725.c  MCP4725.h
cubeide_proj/Core/PI4IOE5V6416/: PI4IOE5V6416.cpp  PI4IOE5V6416.hpp
cubeide_proj/Core/Quaternion/: Quaternion.cpp  Quaternion.hpp
cubeide_proj/Core/Src/: _c_src.c  _cpp_src.cpp  _main.cpp  _main_cpp_compat.cpp  cpp_main.cpp  cpp_main_wrapper.cpp  filters.c  filters.cpp  main.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c  ugfx_widgets.cpp  utils.c
cubeide_proj/Core/SwitecX12-lib/: SwitecX12.cpp  SwitecX12.hpp
cubeide_proj/MCP4725-lib/: MCP4725.c  MCP4725.h
cubeide_proj/STM32_WPAN/App/: app_ble.c  custom_app.c  custom_stm.c  custom_stm.h
cubeide_proj/SwitecX12-lib/: SwitecX12.cpp  SwitecX12.hpp
cubeide_proj/USB_Device/App/: usbd_cdc_if.c
cubeide_proj/python/: dfu_flash.py  display.py
cubeide_proj/res/: batt.c  beam.c  brake.c  mitslogoanim_128.c  mitslogoanim_64.c
cubeide_proj/ugfx/drivers/gdisp/ILI9341/: gdisp_lld_ILI9341.c  gdisp_lld_config.h
cubeide_proj/ugfx/drivers/gdisp/SSD1351/: gdisp_lld_SSD1351.c  gdisp_lld_config.h
cubeide_proj/ugfx/drivers/gdisp/ST7789VI/: ST7789VI.h  gdisp_lld_ST7789VI.c
cubeide_proj/ugfx/drivers/gdisp/s6e63d6/: driver.mk  gdisp_lld_config.h  gdisp_lld_s6e63d6.c  s6e63d6.h
cubeide_proj/ugfx/src/gdisp/: gdisp_colors.h
cubeide_proj/ugfx/src/gdisp/fonts/: BITSUMIS10.c  BITSUMIS10_aa.c  BITSUMIS12.c  BITSUMIS12_aa.c  BITSUMIS16.c  BITSUMIS16_aa.c  BITSUMIS20.c  BITSUMIS24.c  BITSUMIS30.c  BITSUMIS30_aa.c  fonts.h  lcddot_tr80.c
web/: webui.html
